# bzl-asm-cross-package-include-mre

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
